--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "mysql2": "^3.9.7",
     "node-fetch": "2"
   },
   "devDependencies": {
@@ -27,4 +28,3 @@
     "globals": "^15.0.0"
   }
 }
-
